Improvements: `busboy` got upgraded, and ES module style is being used to organize code in a better way.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+	"type": "module",
+	"scripts": {
+		"start": "node run.js"
+	},
 	"dependencies": {
-		"busboy": "^0.2.13"
+		"busboy": "^1.6.0"
 	}
 }
